# pcl_3d_rec_framework

./: .gitignore  CMakeLists.txt  README.md  pcl_3d_rec_framework.kdev4
.kdev4/: pcl_3d_rec_framework.kdev4
apps/: alignment_prerejective.cpp  global_classification.cpp  hypothesesVerification.cpp  initial_alignment.cpp  local_recognition_mian_dataset.cpp  ppf_rec.cpp  resize.cpp
include/feature_wrapper/global/: crh_estimator.h  cvfh_estimator.h  esf_estimator.h  global_estimator.h  ourcvfh_estimator.h  vfh_estimator.h
include/feature_wrapper/local/: colorshot_local_estimator.h  fpfh_local_estimator.h  fpfh_local_estimator_omp.h  local_estimator.h  shot_local_estimator.h  shot_local_estimator_omp.h
include/pc_source/: mesh_source.h  registered_views_source.h  source.h
include/pipeline/: global_nn_classifier.h  global_nn_recognizer_crh.h  global_nn_recognizer_cvfh.h  local_recognizer.h
include/pipeline/impl/: global_nn_classifier.hpp  global_nn_recognizer_crh.hpp  global_nn_recognizer_cvfh.hpp  local_recognizer.hpp
include/utils/: readparameters.h  uniform_sampling.hpp
src/: global_nn_classifier.cpp  global_nn_recognizer_crh.cpp  global_nn_recognizer_cvfh.cpp  local_recognizer.cpp  openni_frame_source.cpp  readparameters.cpp  render_views_tesselated_sphere.cpp  uniform_sampling.cpp
